--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "pymousse"
-version = "0.1.3"
+version = "0.1.4"
 authors = [
   { name="Franck Pommereau", email="franck.pommereau@univ-evry.fr" },
 ]
@@ -24,6 +24,7 @@ dependencies = [
   "mosspy",
   "thefuzz",
   "python-Levenshtein",
+  "fastcluster",
   "pandas",
   "numpy",
   "scipy",
